feat: stratified sampling added

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -21,7 +21,7 @@
                 "# local helpers\n",
                 "from src.file_handling import load_raw_data, save_processed_data\n",
                 "import src.eda as eda_mod\n",
-                "from src.preprocess import preprocess_data\n",
+                "from src.preprocess import preprocess_data, create_stratified_sample\n",
                 "\n",
                 "plt.style.use('seaborn-v0_8-whitegrid')\n",
                 "sns.set_palette(\"husl\")\n",
@@ -41,20 +41,15 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Path to CFPB complaints CSV (uses the repo data/raw/complaints.csv by default)\n",
                 "raw_data_path = project_root / \"data\" / \"raw\" / \"complaints.csv\"\n",
                 "\n",
-                "# Check if file exists\n",
                 "if not raw_data_path.exists():\n",
                 "    print(f\"❌ File not found at: {raw_data_path}\")\n",
-                "    print(\"\\nPlease place the CFPB complaints CSV at this location (data/raw/complaints.csv)\")\n",
                 "else:\n",
                 "    print(f\"✓ Found data file at: {raw_data_path}\")\n",
                 "\n",
-                "# Load using our file helper (nice error message if missing)\n",
                 "df_raw = load_raw_data(raw_data_path)\n",
-                "print(f\"✓ Loaded {len(df_raw):,} complaints\")\n",
-                "print(f\"Columns: {df_raw.columns.tolist()}\")"
+                "print(f\"✓ Loaded {len(df_raw):,} complaints\")"
             ]
         },
         {
@@ -64,7 +59,7 @@
             "source": [
                 "## 1. Initial EDA\n",
                 "\n",
-                "### Analyze the distribution of complaints across different Products."
+                "### Analyze product distribution."
             ]
         },
         {
@@ -82,7 +77,7 @@
             "id": "eda-requirement-2",
             "metadata": {},
             "source": [
-                "### Identify the number of complaints with and without narratives."
+                "### Narrative presence analysis."
             ]
         },
         {
@@ -101,14 +96,9 @@
             "id": "eda-requirement-3",
             "metadata": {},
             "source": [
-                "## 2. Preprocessing & Deep Dive\n",
+                "## 2. Preprocessing & Sampling\n",
                 "\n",
-                "### Filter, Clean, and Analyze Lengths\n",
-                "We will now apply the full preprocessing pipeline which includes:\n",
-                "- Filtering for specified products (Credit card, Personal loan, Buy Now, Pay Later (BNPL), Savings account, and Money transfers)\n",
-                "- Removing records with empty Consumer complaint narrative fields\n",
-                "- Dropping PII columns\n",
-                "- Cleaning text (lowercasing, boilerplate removal, special characters, whitespace normalization)"
+                "### Full Preprocessing Pipeline"
             ]
         },
         {
@@ -124,10 +114,32 @@
         },
         {
             "cell_type": "markdown",
+            "id": "sampling-requirement",
+            "metadata": {},
+            "source": [
+                "### Stratified Sampling\n",
+                "Create a stratified sample of 10,000-15,000 complaints to ensure proportional representation."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "eda-sampling",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Create a stratified sample of 12,000 complaints\n",
+                "df_sampled = create_stratified_sample(df_processed, target_size=12000)\n",
+                "\n",
+                "print(f\"\\nSampled dataset shape: {df_sampled.shape}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
             "id": "eda-requirement-4",
             "metadata": {},
             "source": [
-                "### Calculate and visualize the length (word count) of the Consumer complaint narrative."
+                "### Narrative length distribution (on cleaned narratives)."
             ]
         },
         {
@@ -137,7 +149,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "eda_mod.plot_narrative_length_distribution(df_processed)"
+                "eda_mod.plot_narrative_length_distribution(df_sampled)"
             ]
         },
         {
@@ -145,40 +157,48 @@
             "id": "eda-requirement-5",
             "metadata": {},
             "source": [
-                "### Sample of Cleaned Narratives"
+                "### Sample of Cleaned Narratives."
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "eda-samples",
+            "id": "eda-sample-narratives",
             "metadata": {},
             "outputs": [],
             "source": [
-                "if len(df_processed) > 0:\n",
-                "    print(\"Raw Narrative Sample:\")\n",
-                "    print(df_processed['Consumer complaint narrative'].iloc[0][:500])\n",
-                "    print(\"\\nCleaned Narrative Sample:\")\n",
-                "    print(df_processed['clean_narrative'].iloc[0][:500])\n",
-                "else:\n",
-                "    print(\"No records found after filtering!\")"
+                "sample_row = df_sampled.iloc[0]\n",
+                "print(\"RAW NARRATIVE:\")\n",
+                "print(sample_row['Consumer complaint narrative'])\n",
+                "print(\"\\nCLEANED NARRATIVE:\")\n",
+                "print(sample_row['clean_narrative'])\n",
+                "print(f\"\\nWord Count: {sample_row['narrative_word_count']}\")"
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
+            "cell_type": "markdown",
             "id": "eda-save",
             "metadata": {},
+            "source": [
+                "## 3. Save Processed Data"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "eda-save-processed",
+            "metadata": {},
             "outputs": [],
             "source": [
-                "# Save processed data for RAG\n",
-                "save_processed_data(df_processed)"
+                "save_path = project_root / \"data\" / \"processed\" / \"filtered_complaints.csv\"\n",
+                "save_processed_data(df_sampled, save_path)\n",
+                "print(f\"✓ Sampled data saved to {save_path}\")"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv (3.11.9)",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python",
             "name": "python3"
         },
