--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -280,7 +280,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": ".venv (3.11.9)",
             "language": "python",
             "name": "python3"
         },
@@ -294,7 +294,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.5"
+            "version": "3.11.9"
         }
     },
     "nbformat": 4,
