notebooks updated with results

--- a/notebooks/chunk_embed_index.ipynb
+++ b/notebooks/chunk_embed_index.ipynb
@@ -17,10 +17,33 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "id": "setup",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[OK] HuggingFace cache set to: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\.venv\\Lib\\site-packages\\transformers\\utils\\hub.py:110: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.\n",
+                        "  warnings.warn(\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "✓ Imports and setup complete!\n"
+                    ]
+                }
+            ],
             "source": [
                 "import sys\n",
                 "from pathlib import Path\n",
@@ -55,10 +78,42 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "id": "load-exec",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Vector store path: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss\n",
+                        "Pre-built embeddings: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\data\\complaint_embeddings.parquet\n",
+                        "Loading embedding model: sentence-transformers/all-MiniLM-L6-v2\n",
+                        "  (First run will download ~80MB to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf)\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "'(MaxRetryError('HTTPSConnectionPool(host=\\'huggingface.co\\', port=443): Max retries exceeded with url: /sentence-transformers/all-MiniLM-L6-v2/resolve/main/modules.json (Caused by NameResolutionError(\"HTTPSConnection(host=\\'huggingface.co\\', port=443): Failed to resolve \\'huggingface.co\\' ([Errno 11001] getaddrinfo failed)\"))'), '(Request ID: 854cb151-19ba-40d7-a574-9e82ef81120a)')' thrown while requesting HEAD https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2/resolve/main/./modules.json\n",
+                        "Retrying in 1s [Retry 1/5].\n",
+                        "'(MaxRetryError('HTTPSConnectionPool(host=\\'huggingface.co\\', port=443): Max retries exceeded with url: /sentence-transformers/all-MiniLM-L6-v2/resolve/main/modules.json (Caused by NameResolutionError(\"HTTPSConnection(host=\\'huggingface.co\\', port=443): Failed to resolve \\'huggingface.co\\' ([Errno 11001] getaddrinfo failed)\"))'), '(Request ID: 985820e4-4480-4a59-9eaf-87192eb9ddc5)')' thrown while requesting HEAD https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2/resolve/main/./modules.json\n",
+                        "Retrying in 2s [Retry 2/5].\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[OK] Embedding model loaded\n",
+                        "Loading existing FAISS index from c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss...\n",
+                        "[OK] Vector store loaded (ntotal=1,375,327)\n",
+                        "\n",
+                        "✓ Vector store active with 1,375,327 vectors.\n"
+                    ]
+                }
+            ],
             "source": [
                 "print(f\"Vector store path: {config.VECTOR_STORE_DIR}\")\n",
                 "print(f\"Pre-built embeddings: {config.PREBUILT_EMBEDDINGS_PATH}\")\n",
@@ -80,10 +135,52 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "id": "search-exec",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "======================================================================\n",
+                        "SEARCH RESULTS for: 'I lost my credit card and there are fraudulent charges'\n",
+                        "======================================================================\n",
+                        "\n",
+                        "--- Result 1 ---\n",
+                        "Complaint ID: 2695792\n",
+                        "Product: Credit card or prepaid card\n",
+                        "Category: Credit Card\n",
+                        "Issue: Problem with a purchase shown on your statement\n",
+                        "Company: SYNCHRONY FINANCIAL\n",
+                        "Chunk: 0/1\n",
+                        "Content preview:\n",
+                        "i lost my credit card and and their are fraudulent charges and transactions of 2500.00 . the charges do n't belong to me. i have never used my credit card....\n",
+                        "\n",
+                        "--- Result 2 ---\n",
+                        "Complaint ID: 8236492\n",
+                        "Product: Credit card\n",
+                        "Category: Credit Card\n",
+                        "Issue: Problem with a purchase shown on your statement\n",
+                        "Company: Chime Financial Inc\n",
+                        "Chunk: 0/1\n",
+                        "Content preview:\n",
+                        "i lost my credit debit card and unauthorized charges where submitted to my account....\n",
+                        "\n",
+                        "--- Result 3 ---\n",
+                        "Complaint ID: 1409416\n",
+                        "Product: Credit card\n",
+                        "Category: Credit Card\n",
+                        "Issue: Credit card protection / Debt protection\n",
+                        "Company: JPMORGAN CHASE & CO.\n",
+                        "Chunk: 0/1\n",
+                        "Content preview:\n",
+                        "i found fraudulent charges on my credit card....\n",
+                        "\n",
+                        "======================================================================\n"
+                    ]
+                }
+            ],
             "source": [
                 "query = \"I lost my credit card and there are fraudulent charges\"\n",
                 "results = vectorstore.search_similar(vs, query, k=3)\n",
@@ -103,10 +200,31 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "id": "metadata-exec",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Sample Metadata:\n",
+                        "  chunk_index: 0\n",
+                        "  company: SYNCHRONY FINANCIAL\n",
+                        "  complaint_id: 2695792\n",
+                        "  date_received: 2017-10-07\n",
+                        "  issue: Problem with a purchase shown on your statement\n",
+                        "  product: Credit card or prepaid card\n",
+                        "  product_category: Credit Card\n",
+                        "  state: AZ\n",
+                        "  sub_issue: Card was charged for something you did not purchase with the card\n",
+                        "  total_chunks: 1\n",
+                        "\n",
+                        "Content Snippet:\n",
+                        "i lost my credit card and and their are fraudulent charges and transactions of 2500.00 . the charges do n't belong to me. i have never used my credit card....\n"
+                    ]
+                }
+            ],
             "source": [
                 "sample_doc = results[0]\n",
                 "print(\"Sample Metadata:\")\n",
@@ -128,10 +246,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "id": "parquet-logic-show",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Batch processing is automatically handled by the src scripts to ensure scalability.\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Example of how batches ARE processed (mental model)\n",
                 "# for batch in pf.iter_batches(batch_size=50000):\n",
