--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -198,7 +198,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3 (ipykernel)",
+            "display_name": ".venv (3.11.9)",
             "language": "python",
             "name": "python3"
         },
