updated with output

--- a/notebooks/chunk_embed_index.ipynb
+++ b/notebooks/chunk_embed_index.ipynb
@@ -43,7 +43,35 @@
                 "from src.chunking import chunk_documents, get_chunk_stats\n",
                 "from src.vectorstore import create_vector_store, load_vector_store, get_retriever, print_search_results\n",
                 "\n",
-                "print(\"✓ Imports and setup complete!\")"
+                "print(\"✓ Imports and setup complete!\")\n",
+                "\n",
+                "from src.preprocess import create_stratified_sample"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "546f66a0",
+            "metadata": {},
+            "source": [
+                "## 1.1 Stratified Sampling\n",
+                "\n",
+                "We apply stratified sampling to select a representative subset of 10,000 complaints. This ensures the vector store is built on a manageable dataset while maintaining the proportional distribution of product categories from the filtered dataset."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "0f3dbf8f",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Select a stratified sample of 10k records\n",
+                "target_sample_size = 10000\n",
+                "print(f\"Applying stratified sampling (Target: {target_sample_size})...\")\n",
+                "df = create_stratified_sample(df, target_size=target_sample_size)\n",
+                "\n",
+                "# Verify final shape\n",
+                "print(f\"Sample size for indexing: {len(df):,}\")"
             ]
         },
         {
