--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1,6 +1,26 @@
 {
     "cells": [
         {
+            "cell_type": "markdown",
+            "id": "3c102f86",
+            "metadata": {},
+            "source": [
+                "## Consumer Complaint Retrieval Augmented Generation (RAG) - Exploratory Data Analysis\n",
+                "\n",
+                "This notebook provides a comprehensive exploratory data analysis (EDA) of the CFPB Consumer Complaint dataset. The goal is to understand the structure, distribution, and content of the complaints to better inform our RAG pipeline strategy.\n",
+                "\n",
+                "**Key objectives:**\n",
+                "\n",
+                "**Initial distribution analysis:** Understanding the raw volume and product categories.\n",
+                "\n",
+                "**Narrative analysis:** Deep dive into the text data (length, keywords).\n",
+                "\n",
+                "**Cleaning and Filter validation:** Verifying the impact of our preprocessing steps.\n",
+                "\n",
+                "**Stratified Sampling:** Ensuring a representative dataset for downstream tasks."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "id": "e9b935ce",
@@ -22,6 +42,7 @@
                 "from src.file_handling import load_raw_data, save_processed_data\n",
                 "import src.eda as eda_mod\n",
                 "from src.preprocess import preprocess_data, create_stratified_sample\n",
+                "from src import config\n",
                 "\n",
                 "plt.style.use('seaborn-v0_8-whitegrid')\n",
                 "sns.set_palette(\"husl\")\n",
@@ -35,21 +56,31 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "id": "b31c9fd5",
+            "metadata": {},
+            "source": [
+                "\n",
+                "1. Load Raw Data\n",
+                "\n",
+                "We load the official CFPB complaints dataset. Note that this is a large CSV file with millions of records."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "id": "66ebdea6",
             "metadata": {},
             "outputs": [],
             "source": [
+                "\n",
                 "raw_data_path = project_root / \"data\" / \"raw\" / \"complaints.csv\"\n",
                 "\n",
                 "if not raw_data_path.exists():\n",
-                "    print(f\"❌ File not found at: {raw_data_path}\")\n",
+                "    print(f\"❌ File not found at: {raw_data_path}. Please download the dataset.\")\n",
                 "else:\n",
-                "    print(f\"✓ Found data file at: {raw_data_path}\")\n",
-                "\n",
-                "df_raw = load_raw_data(raw_data_path)\n",
-                "print(f\"✓ Loaded {len(df_raw):,} complaints\")"
+                "    df_raw = load_raw_data(raw_data_path)\n",
+                "    print(f\"✓ Loaded {len(df_raw):,} complaints\")"
             ]
         },
         {
@@ -57,9 +88,11 @@
             "id": "eda-requirement-1",
             "metadata": {},
             "source": [
-                "## 1. Initial EDA\n",
+                "## 2. Global Distribution Analysis\n",
                 "\n",
-                "### Analyze product distribution."
+                "**Objective:** Analyze the distribution of complaints across different Products.\n",
+                "\n",
+                "We look at the relative volume of complaints across all product categories to identify the major areas of consumer concern."
             ]
         },
         {
@@ -69,7 +102,31 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "eda_mod.plot_product_distribution(df_raw)"
+                "eda_mod.plot_product_distribution(df_raw, title=\"Raw Complaint Distribution by Product Category\")\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "3124ed36",
+            "metadata": {},
+            "source": [
+                "## 2.1 Initial Narrative Length Analysis\n",
+                "\n",
+                "**Objective:** Calculate and visualize the length (word count) of the Consumer complaint narrative on the raw data.\n",
+                "\n",
+                "**Key Question:** Are there very short or very long narratives? Identifying these outliers early helps inform our filtering strategy."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "b1f503a1",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Analyze length on raw data\n",
+                "# Note: Some raw records may have empty narratives, which we handle (fillna)\n",
+                "eda_mod.plot_narrative_length_distribution(df_raw, narrative_col='Consumer complaint narrative')"
             ]
         },
         {
@@ -77,7 +134,11 @@
             "id": "eda-requirement-2",
             "metadata": {},
             "source": [
-                "### Narrative presence analysis."
+                "## 2.2 Narrative Presence Analysis\n",
+                "\n",
+                "**Objective:** Identify the number of complaints with and without narratives.\n",
+                "\n",
+                "Since our RAG pipeline relies on text semantic search, we must filter for those that have valid text content."
             ]
         },
         {
@@ -88,7 +149,9 @@
             "outputs": [],
             "source": [
                 "presence = eda_mod.narrative_presence_analysis(df_raw)\n",
-                "print(f\"Narrative Presence Analysis:\\n{presence}\")"
+                "print(f\"Total records: {presence['total']:,}\")\n",
+                "print(f\"Records with narration: {presence['with_narrative']:,} ({presence['percentage_with']:.2f}%)\")\n",
+                "print(f\"Records without narration: {presence['without_narrative']:,}\")"
             ]
         },
         {
@@ -96,9 +159,21 @@
             "id": "eda-requirement-3",
             "metadata": {},
             "source": [
-                "## 2. Preprocessing & Sampling\n",
+                "## 3. Preprocessing & Filtering\n",
                 "\n",
-                "### Full Preprocessing Pipeline"
+                "**Objective:** Filter the dataset to meet the project's requirements and clean the text.\n",
+                "\n",
+                "We apply the following steps:\n",
+                "1. **Filter Products**: Include only records for the five specified products:\n",
+                "    - Credit card\n",
+                "    - Personal loan\n",
+                "    - Buy Now, Pay Later (BNPL)\n",
+                "    - Savings account\n",
+                "    - Money transfers\n",
+                "2. **Remove Empty Narratives**: Remove any records with empty Consumer complaint narrative fields.\n",
+                "3. **Clean Text**: Clean the text narratives to improve embedding quality by:\n",
+                "    - Lowercasing text.\n",
+                "    - Removing special characters or boilerplate text (e.g., \"I am writing to file a complaint...\")."
             ]
         },
         {
@@ -108,8 +183,13 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "df_processed = preprocess_data(df_raw)\n",
-                "print(f\"\\nFinal processed dataset shape: {df_processed.shape}\")"
+                "\n",
+                "df_filtered = preprocess_data(df_raw)\n",
+                "print(f\"\\nFiltered dataset shape: {df_filtered.shape}\")\n",
+                "\n",
+                "# Explicitly save the cleaned and filtered dataset\n",
+                "save_path = project_root / \"data\" / \"filtered_complaints.csv\"\n",
+                "save_processed_data(df_filtered, save_path)"
             ]
         },
         {
@@ -117,8 +197,9 @@
             "id": "sampling-requirement",
             "metadata": {},
             "source": [
-                "### Stratified Sampling\n",
-                "Create a stratified sample of 10,000-15,000 complaints to ensure proportional representation."
+                "## Visualizing the Filtered Dataset\n",
+                "\n",
+                "This visualization shows the distribution of standardized products in our refined dataset."
             ]
         },
         {
@@ -128,10 +209,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Create a stratified sample of 12,000 complaints\n",
-                "df_sampled = create_stratified_sample(df_processed, target_size=12000)\n",
-                "\n",
-                "print(f\"\\nSampled dataset shape: {df_sampled.shape}\")"
+                "eda_mod.plot_product_distribution(df_filtered, title=\"Filtered & Standardized Complaint Distribution\")\n"
             ]
         },
         {
@@ -139,7 +217,9 @@
             "id": "eda-requirement-4",
             "metadata": {},
             "source": [
-                "### Narrative length distribution (on cleaned narratives)."
+                "## 4. Deep Dive: Narrative Text Analysis\n",
+                "\n",
+                "Now we analyze the textual content of the narratives to gain insights for chunking and search strategies. We explicitly look at the distribution of word counts to identify outliers (very short or very long narratives)."
             ]
         },
         {
@@ -149,7 +229,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "eda_mod.plot_narrative_length_distribution(df_sampled)"
+                "eda_mod.plot_narrative_length_distribution(df_filtered)"
             ]
         },
         {
@@ -157,7 +237,9 @@
             "id": "eda-requirement-5",
             "metadata": {},
             "source": [
-                "### Sample of Cleaned Narratives."
+                "## Narrative Length by Product\n",
+                "\n",
+                "Analyzing narrative length across different product categories to identify variability in consumer description detail."
             ]
         },
         {
@@ -167,12 +249,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "sample_row = df_sampled.iloc[0]\n",
-                "print(\"RAW NARRATIVE:\")\n",
-                "print(sample_row['Consumer complaint narrative'])\n",
-                "print(\"\\nCLEANED NARRATIVE:\")\n",
-                "print(sample_row['clean_narrative'])\n",
-                "print(f\"\\nWord Count: {sample_row['narrative_word_count']}\")"
+                "eda_mod.plot_length_by_product(df_filtered)"
             ]
         },
         {
@@ -180,7 +257,9 @@
             "id": "eda-save",
             "metadata": {},
             "source": [
-                "## 3. Save Processed Data"
+                "## Top Keywords Identification\n",
+                "\n",
+                "Identifying high-frequency terms helps us understand common pain points and consumer language."
             ]
         },
         {
@@ -190,9 +269,56 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "save_path = project_root / \"data\" / \"processed\" / \"filtered_complaints.csv\"\n",
-                "save_processed_data(df_sampled, save_path)\n",
-                "print(f\"✓ Sampled data saved to {save_path}\")"
+                "eda_mod.plot_top_keywords(df_filtered)\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "f3149183",
+            "metadata": {},
+            "source": [
+                "## 5. Temporal and Company Analysis\n",
+                "\n",
+                "Understanding the volume over time and the most complained-about companies."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "75e1438e",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "eda_mod.plot_temporal_trends(df_filtered)\n",
+                "plt.show()\n",
+                "eda_mod.plot_company_distribution(df_filtered)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "9ca2c44d",
+            "metadata": {},
+            "source": [
+                "## 6. Stratified Sampling for RAG Prototyping\n",
+                "\n",
+                "To build a responsive prototype, we create a representative sample that maintains product distribution proportions."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "73a483cd",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "\n",
+                "target_size = 15000\n",
+                "df_sampled = create_stratified_sample(df_filtered, target_size=target_size)\n",
+                "\n",
+                "# Final verification of counts\n",
+                "print(f\"Final Sample Size: {len(df_sampled):,}\")\n",
+                "print(\"Sample distribution:\")\n",
+                "print(df_sampled['Product'].value_counts(normalize=True))"
             ]
         }
     ],
